# codex-vision

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: app.js  index.html
scripts/: install.ps1  install.sh
src/: doctor.rs  lib.rs  main.rs  model.rs  scanner.rs  service.rs  tui.rs  web.rs
